# python-ztidentity

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_ztidentity.py
ztidentity/: __init__.py  salsa20.py
